--- a/src/content/once-ui/components/spinner.mdx
+++ b/src/content/once-ui/components/spinner.mdx
@@ -1,9 +1,87 @@
 ---
 title: "Spinner"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
+summary: "The Spinner component displays a rotating loader to indicate progress or ongoing activity. It supports various sizes and accessibility labeling."
+updatedAt: "2025-05-09"
 navLabel: "Spinner"
-navIcon: "learn"
+navIcon: "components"
 ---
 
-## Coming soon
+Use `Spinner` to represent background loading states or async transitions in the interface.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Spinner />
+  }
+  codeInstances={[
+    {
+      code:
+`<Spinner />`,
+      language: "tsx",
+      label: "Default"
+    }
+  ]}
+/>
+
+## Sizes
+
+Available in five size options to match layout context.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row gap="16" center>
+      <Spinner size="xs" />
+      <Spinner size="s" />
+      <Spinner size="m" />
+      <Spinner size="l" />
+      <Spinner size="xl" />
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<Spinner size="xs" />
+<Spinner size="s" />
+<Spinner size="m" />
+<Spinner size="l" />
+<Spinner size="xl" />`,
+      language: "tsx",
+      label: "Sizes"
+    }
+  ]}
+/>
+
+## Accessibility
+
+Customize the ARIA label for screen readers.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Spinner ariaLabel="Processing payment..." />
+  }
+  codeInstances={[
+    {
+      code:
+`<Spinner ariaLabel="Processing payment..." />`,
+      language: "tsx",
+      label: "ARIA label"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["size", ["xs", "s", "m", "l", "xl"], "m"],
+    ["ariaLabel", "string", "Loading"],
+    ["className"],
+    ["style"],
+    ["...flex"]
+  ]}
+/>
